# otuscppprof

./: README.md
.github/workflows/: hw01.yml  hw02.yml  hw03.yml  hw04.yml  hw06.yml
hw01/: CMakeLists.txt  hw01.yml  main.cpp
hw01/include/: func.hpp  version_hw01.hpp.in
hw01/src/: func.cpp
hw01/tests/: CMakeLists.txt  test_version.cpp
hw02/: CMakeLists.txt  main.cpp
hw02/include/: ip.hpp  viewdata.hpp
hw02/src/: CMakeLists.txt  ip.cpp
hw02/tests/: CMakeLists.txt  test_ip.cpp  test_viewdata.cpp
hw03/: CMakeLists.txt  main.cpp
hw03/include/: IMyContainer.hpp  MyAllocatorMap.hpp  MyAllocatorMyList.hpp  MyList.hpp  UniversalAllocator.hpp
hw04/: CMakeLists.txt  main.cpp
hw04/include/: print_ip.hpp
hw06/: CMakeLists.txt  main.cpp
hw06/include/: Matrix.hpp  ProxyMatrix.hpp
hw06/src/: CMakeLists.txt
hw2/: main.cpp
hw2/src/: ip.cpp  viewdata.cpp
hw2/tests/: CMakeLists.txt  test_ip.cpp  test_viewdata.cpp
